# self-replicating-agent

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: README.md  architecture.md
docs/diagrams/: agent-workflow.mmd  data-flow.mmd  system-architecture.mmd
examples/: ai-real-estate-investment-analyzer.md  finance-quest-gamified-finance.md  smart-credit-ecosystem.md
sandbox/: flights.md
